# memforge

./: .gitignore  .gitleaks.toml  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  secret-scan-deep.yml
adapters/: README.md
adapters/aider/: README.md  aider-memory-cmd.ps1  aider-memory-cmd.sh  aider.conf.yml.example
adapters/claude-code/: README.md
adapters/claude-code/hooks/: memory-auto-commit.sh  memory-read-tracker.sh  memory_recall_hook.py
adapters/claude-code/skills/consolidate-memory/: SKILL.md
adapters/codex/: AGENTS.md.template  README.md
adapters/cursor/: README.md  daemon-launchd.plist  daemon-systemd.service  daemon-windows-task.ps1
adapters/cursor/rules/: memory-load.mdc
adapters/routemeld/: README.md  memory-config.json.template  settings.snippet.json
adapters/vscode-copilot/: README.md  copilot-instructions.md.template  vscode-settings.snippet.json
docs/: adapter-implementation-guide.md  quickstart.md  team-bootstrap.md
examples/: README.md
examples/git-hooks/: commit-msg  commit-msg.ps1
examples/recall/: README.md  recall-synonyms.example.yaml
examples/scripts/: memforge-auto-commit-watcher.ps1  memforge-auto-commit-watcher.sh
examples/websocket/: README.md  config.example.yaml  probe.py
governance/: defensive-publication-record.md
spec/: README.md  SPEC.md  known-limitations.md  taxonomy.yaml  v0.5.0-known-limitations.md
src/memforge/: __init__.py  _security.py  agent_session.py  constants.py  crypto.py  discovery.py  frontmatter.py  identity.py  models.py  paths.py  recall.py  recovery.py  registry.py  revocation.py  sender_sequence.py
src/memforge/cli/: __init__.py  _concurrency_audit.py  _config.py  _dispatch.py  _llm_dispatch.py  agents_md_gen.py  audit.py  audit_deep.py  audit_log.py  cluster_suggest.py  dedup.py  detect.py  dlp_scan.py  frontmatter_backfill.py  index_gen.py  link_rewriter.py  lint.py  migrate_claim_block.py  preamble_extract.py  promote.py  query.py  recall.py  resolve.py  rollup.py  validate.py  watch.py
src/memforge/cli/v05/: __init__.py  attest_agent.py  init_operator.py  init_store.py  memories_by_key.py  messaging_doctor.py  operator_registry.py  recovery_backup_confirm.py  recovery_init.py  revocation_snapshot.py  revoke.py  revoke_cache_refresh.py  revoke_memories.py  rotate_key.py  upgrade_v04_memories.py
tests/: conftest.py  test_agents_md_gen.py  test_audit.py  test_audit_convention_drift.py  test_audit_deep_taxonomy.py  test_audit_log.py  test_audit_recall_gaps.py  test_audit_waiver.py  test_cluster_R_minor_regressions.py  test_cluster_R_regressions.py  test_concurrency_audit.py  test_conformance_sensitivity.py  test_detect.py  test_discovery.py  test_dlp_scan_coverage.py  test_frontmatter.py  test_frontmatter_backfill.py  test_index_gen_competing_claims.py  test_index_gen_pointer_truncation.py  test_link_rewriter_batch_input.py  test_lint.py  test_memory_dedup.py  test_migrate_claim_block.py  test_models.py  test_paths.py  test_promote.py  test_query_text_scope.py  test_recall.py  test_resolve.py  test_rollup.py  test_sensitivity_enforcement.py  test_spec_delta_r1.py  test_v05_cli.py  test_v05_cli_e2e.py  test_validate.py  test_watch.py
tests/conformance/sensitivity/: README.md
tests/conformance/sensitivity/export_tier_internal/: expected.json
tests/conformance/sensitivity/export_tier_privileged/: expected.json
tests/conformance/sensitivity/export_tier_public/: expected.json
tests/conformance/sensitivity/export_tier_restricted/: expected.json
tests/conformance/sensitivity/label_mismatch_blocked/: expected.json
tests/conformance/sensitivity/label_mismatch_blocked/input/: mem-public-with-arn.md
tests/conformance/sensitivity/shared_input/: MEMORY.md  mem-internal-rule.md  mem-privileged-rule.md  mem-public-rule.md  mem-restricted-rule.md
tools/: README.md  agents-md-gen  memory-audit  memory-audit-deep  memory-audit-log  memory-cluster-suggest  memory-dedup  memory-dlp-scan  memory-frontmatter-backfill  memory-index-gen  memory-link-rewriter  memory-preamble-extract  memory-promote  memory-query  memory-recall  memory-rollup  memory-watch
